change font sizes and fix alignment

--- a/main.css
+++ b/main.css
@@ -33,11 +33,20 @@ body {
 .main-nav {
   display: inline-block;
   text-align: right;
-  width: calc(100% - 54px);
+  width: calc(100% - 70px);
+  vertical-align: middle;
 }
 
 .main-header > div {
   display: inline-block;
+  vertical-align: middle;
+}
+
+.main-header__brand {
+  color: #0e4f1f;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 22px;
 }
 
 .main-nav__items {
